kubernetes/main/apps/flux-system/addons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${PUBLIC_DOMAIN}
    cert-manager.io/cluster-issuer: zerossl-prod
    cert-manager.io/private-key-rotation-policy: Always
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "384"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - &host "flux-webhook.${PUBLIC_DOMAIN}"
      secretName: flux-webhook-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
